WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169633
Propagate PassKit errors
https://bugs.webkit.org/show_bug.cgi?id=169633
Summary
Propagate PassKit errors
Anders Carlsson
Reported
2017-03-14 14:50:06 PDT
Propagate PassKit errors.
Attachments
Patch
(9.46 KB, patch)
2017-03-14 14:52 PDT
,
Anders Carlsson
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2017-03-14 14:52:37 PDT
Created
attachment 304429
[details]
Patch
WebKit Commit Bot
Comment 2
2017-03-14 14:55:34 PDT
Attachment 304429
[details]
did not pass style-queue: ERROR: Source/WebCore/Modules/applepay/ApplePaySession.cpp:420: Missing space around : in range-based for statement [whitespace/colon] [4] ERROR: Source/WebKit2/UIProcess/ApplePay/cocoa/WebPaymentCoordinatorProxyCocoa.mm:567: A case label should not be indented, but line up with its switch statement. [whitespace/indent] [4] Total errors found: 2 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3
2017-03-14 15:32:33 PDT
Committed
r213946
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug