Propagate PassKit errors https://bugs.webkit.org/show_bug.cgi?id=169633 rdar://problem/31043392

Reviewed by Dean Jackson.

Source/WebCore:

* Modules/applepay/ApplePayError.idl:
* Modules/applepay/ApplePaySession.cpp:
(WebCore::convert):
(WebCore::convertAndValidate):
* Modules/applepay/PaymentRequest.h:

Source/WebKit2:

* UIProcess/ApplePay/cocoa/WebPaymentCoordinatorProxyCocoa.mm:
(WebKit::toNSError):

Canonical link: https://commits.webkit.org/186629@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213946 268f45cc-cd09-0410-ab3c-d52691b4dbfc